# rust-order

./: .env.example  Cargo.toml  Dockerfile  Dockerfile-dev  Makefile
.github/workflows/: build-by-branch.yaml  build-by-tag.yaml
configuration/: development.toml
src/application/: Cargo.toml
src/application/src/: commands.rs  commands_tests.rs  handlers.rs  handlers_tests.rs  lib.rs  mappers.rs  mappers_tests.rs  repositories.rs  settings.rs
src/application/src/outbox/: mod.rs
src/application/src/outbox/models/: approval.rs  mod.rs  payment.rs
src/application/src/ports/: mod.rs
src/application/src/ports/input/message/: customer_message_listener.rs  listeners.rs  mod.rs  product_message_listener.rs
src/application/src/ports/output/: repositories.rs
src/domain/: Cargo.toml
src/domain/src/: enums.rs  error.rs  events.rs  lib.rs
src/domain/src/entities/: builders.rs  customer.rs  customer_tests.rs  mod.rs  order.rs  order_item.rs  order_item_tests.rs  order_tests.rs  product.rs  product_tests.rs
src/infrastructure/: Cargo.toml
src/infrastructure/src/: config.rs  customer_postgres_repository.rs  entities.rs  enums.rs  lib.rs  order_postgres_repository.rs  postgres_customer_repository.rs  postgres_customer_repository_tests.rs  postgres_order_repository.rs  postgres_order_repository_tests.rs  postgres_product_repository.rs  postgres_product_repository_tests.rs  product_postgres_repository.rs  schema.rs
src/infrastructure/src/migrations/2025-10-06-113437_create_customers_table/: up.sql
src/infrastructure/src/migrations/2025-10-06-130729_create_products_table/: up.sql
src/infrastructure/src/migrations/2025-10-06-142937_create_orders_table/: up.sql
src/infrastructure/src/migrations/2025-10-06-143531_create_order_items_table/: up.sql
src/infrastructure/src/outbox/: adapters.rs
src/messaging/: Cargo.toml
src/messaging/avro/schemas/: customer_created_event_avro_model.avsc  customer_updated_event_avro_model.avsc  product_created_event_avro_model.avsc  product_deleted_event_avro_model.avsc  product_updated_event_avro_model.avsc
src/messaging/src/: lib.rs  mappers.rs
src/messaging/src/event_handlers/: customer_event_handlers.rs  customer_event_handlers_tests.rs  factory.rs  mod.rs  product_event_handlers.rs  product_event_handlers_tests.rs
src/messaging/src/kafka/: consumer.rs  listener.rs  listeners.rs  mappers.rs  mod.rs  topic.rs
src/messaging/src/kafka/avro/: customer_models.rs  mod.rs  models.rs  product_models.rs
src/presentation/: Cargo.toml
src/presentation/src/: app_state.rs  config.rs  error.rs  lib.rs  requests.rs  responses.rs  validation.rs
src/presentation/src/api/: api_health_check.rs  api_info.rs  api_orders.rs  mod.rs
src/presentation/src/api/docs/: api_doc.rs  health_check_api_doc.rs  info_api_doc.rs  mod.rs  order_api_doc.rs
src/presentation/src/middleware/: correlation_id.rs  mod.rs
src/starter/: Cargo.toml
src/starter/src/: lib.rs  main.rs
