[workspace]
members = [
    "src/domain",
    "src/infrastructure",
    "src/application",
    "src/presentation",
    "src/messaging",
    "src/starter"
]
resolver = "2"

[workspace.dependencies]

# Web
actix-web = "4.11.0"
validator = { version = "0.20.0", features = ["derive"] }

# OpenAPI
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-actix-web = "0.1.2"
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Database and ORM
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "uuid", "chrono", "numeric"] }
diesel_migrations = "2.3.0"

# Logging
log = "0.4.28"
env_logger = "0.11.8"

# Configuration
dotenv = "0.15.0"
config = "0.15.18"

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Testing
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
reqwest = { version = "0.12.23", features = ["json"]}
serial_test = "3.2.0"

# Misc
uuid = { version = "1.18.1", features = ["v4", "serde"] }
readonly = "0.2.13"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }

# Messaging
kafka = "0.10"
apache-avro = "0.20.0"

# Shared
shared = { git = "https://github.com/stepanleas/rust-shared.git", tag = "1.3.9" }
