[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
rusty-money.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tokio.workspace = true
mockall.workspace = true
shared.workspace = true

domain = { path = "../domain" }

[dev-dependencies]