[package]
name = "messaging"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
kafka.workspace = true
apache-avro.workspace = true
shared.workspace = true
rusty-money.workspace = true
rust_decimal.workspace = true

domain = { path = "../domain" }
application = { path = "../application" }