[package]
name = "starter"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger.workspace = true
actix-web.workspace = true
anyhow.workspace = true
dotenv.workspace = true
utoipa-actix-web.workspace = true
utoipa-swagger-ui.workspace = true
kafka.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true

application = { path = "../application" }
presentation = { path = "../presentation" }
infrastructure = { path = "../infrastructure" }
messaging = { path = "../messaging" }

[dev-dependencies]